unpackaged/main/default/objects/CreditNoteLineItem__c/CreditNoteLineItem__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line Item</label>
    <nameField>
        <label>Credit Note Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>