unpackaged/main/default/objects/CreditNoteLineItem__c/fields/BusinessType_ro__c.field-meta.xml
<CustomField>
    <fullName>BusinessType_ro__c</fullName>
    <label>Business Type (Read Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>