unpackaged/main/default/objects/CreditNoteLineItem__c/fields/MaintenanceMargin__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceMargin__c</fullName>
    <formula>CreditNote__r.MaintenanceMargin__c * (
	IF(	OR(NetAmount__c=0,CreditNote__r.MaintenanceRevenue__c=0),
		0,
		NetAmount__c/CreditNote__r.MaintenanceRevenue__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>