unpackaged/main/default/objects/CreditNoteLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Credit Note Line Items</relationshipLabel>
    <relationshipName>CreditNoteLineItemProduct</relationshipName>
    <type>Lookup</type>
</CustomField>