unpackaged/main/default/objects/CreditNoteLineItem__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <formula>TEXT(Product__r.Type__c)</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>