unpackaged/main/default/objects/CreditNoteLineItem__c/fields/ProductType_ro__c.field-meta.xml
<CustomField>
    <fullName>ProductType_ro__c</fullName>
    <label>Product Type (Read Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>