unpackaged/main/default/objects/CreditNoteLineItem__c/fields/ServicesMargin__c.field-meta.xml
<CustomField>
    <fullName>ServicesMargin__c</fullName>
    <formula>CreditNote__r.ServicesMargin__c * (
	IF(	OR(NetAmount__c=0,CreditNote__r.ServicesRevenue__c=0),
		0,
		NetAmount__c/CreditNote__r.ServicesRevenue__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>